--- a/android-util/build.gradle
+++ b/android-util/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
 group='com.github.deep-dive-coding-java'
+version = '1.0.0'
 
 android {
 
@@ -25,4 +26,35 @@ android {
 
 dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from android.sourceSets.main.java.sourceFiles
+}
+
+task javadoc(type: Javadoc) {
+    failOnError = false
+    source = android.sourceSets.main.java.sourceFiles
+    classpath += files(android.getBootClasspath().join(File.pathSeparator))
+    options.links("https://docs.oracle.com/javase/7/docs/api/")
+    options.linksOffline("https://developer.android.com/reference", "${android.sdkDirectory}/docs/reference")
+    title("Deep Dive Coding Android Utility Classes")
+    exclude '**/BuildConfig.java'
+    exclude '**/R.java'
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+task classesJar(type: Jar) {
+    from "$buildDir/intermediates/classes/release"
+}
+
+artifacts {
+    archives classesJar
+    archives javadocJar
+    archives sourcesJar
 }
